--- a/index.html
+++ b/index.html
@@ -1,11 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>C A P S T O N E</title>
+    <title>E X A M P L E S</title>
     <meta charset="utf-8">
 </head>
-<body>
+    <body>
+        <header>
+        <h1>Amapiano</h1>
+        <h2>And Afro Subgenres</h2>
+        </header>
+        <section>
+            <p>
+            Amapiano, from my own perspective is a fascinating rootsy genre from South Africa. The entrancing music features long buildups and crescendos, with palette that can span from high energy to liquid and chill in the same song.  The beat and rhythms feature traditional African percussion, focusing both on highly rhythmic repetition layered with unique syncopation, keeping the listener engaged. 
+            </p>
+        </section>
+        <section>
+            <h2>Similar & Sub Genres of Afro House Music</h2>
+            <ul>
+                <li>Kwaito</li>
+                <li>Sgidongo</li>
+                <li>Gqom</li>
+                <li>Afrobeat</li>
+            </ul>
+        </section>
+    <!--Your assignment should demonstrate examples of the following; and remember to make sure we are NOT adding CSS to our editors html files.. we will be using href:
 
-
-</body>
+    Comments
+    Headings and sub-headings
+    Paragraph
+    A header tag
+    A section tag
+    A list with multiple list items
+    Indentation-->
+    </body>
 </html>
