--- a/index.html
+++ b/index.html
@@ -22,6 +22,20 @@
                 <li>Gqom</li>
                 <li>Afrobeat</li>
             </ul>
+            <p>
+                <h1>Example Links</h1>
+                <a href="https://en.wikipedia.org/wiki/Amapiano">Amapiano on Wikipedia</a>
+                
+                <br><hr>
+                
+                <h2>Meron T & Sey G - State Of Mind</h2>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/AmwQQGqtOZU?si=_G37NnQmO93roc_t" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+                <br><hr>
+
+                <h2>This recently released track by a local Vancity producer features a dynamic mix of sounds influenced by Amapiano and Afrobeat</h2>
+                <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/2103432633&color=%23ff5500&auto_play=true&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/handsometiger" title="Handsome Tiger" target="_blank" style="color: #cccccc; text-decoration: none;">Handsome Tiger</a> · <a href="https://soundcloud.com/handsometiger/better-daze-ft-swordman-kitala" title="BETTER DAZE ft. SWORDMAN KITALA" target="_blank" style="color: #cccccc; text-decoration: none;">BETTER DAZE ft. SWORDMAN KITALA</a></div>
+            </p>
         </section>
     <!--Your assignment should demonstrate examples of the following; and remember to make sure we are NOT adding CSS to our editors html files.. we will be using href:
 
