--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <head>
     <title>E X A M P L E S</title>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="style.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bitcount+Grid+Double:wght@100..900&display=swap" rel="stylesheet">
 </head>
     <body>
         <header>
@@ -33,14 +38,15 @@
 
                 <br><hr>
 
-                <h2>This recently released track by a local Vancity producer features a dynamic mix of sounds influenced by Amapiano and Afrobeat</h2>
+                <h2>Local Vancity Production</h2>
+                <h3>This recently released track by a local Vancity producer features a dynamic mix of sounds influenced by Amapiano and Afrobeat</h3>
                 <iframe width="640" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/2103432633&color=%23ff5500&auto_play=true&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/handsometiger" title="Handsome Tiger" target="_blank" style="color: #cccccc; text-decoration: none;">Handsome Tiger</a> · <a href="https://soundcloud.com/handsometiger/better-daze-ft-swordman-kitala" title="BETTER DAZE ft. SWORDMAN KITALA" target="_blank" style="color: #cccccc; text-decoration: none;">BETTER DAZE ft. SWORDMAN KITALA</a></div>
             </p>
         </section>
         <br><hr>
         <section>
             <figure>
-                <img src="./images/travisDavids.png" width="640" height="360" alt="travis davids artwork 1">
+                <img src="https://geo-taylor.github.io/Capstone/images/travisDavids.png" width="640" height="360" alt="travis davids artwork 1">
                 <figcaption><a href="https://www.artstation.com/mrdavids">Travis Davids ArtStation</a><i> - image attribution: Travis Davids</i></figcaption>
             </figure>
             <figure>
