--- a/index.html
+++ b/index.html
@@ -47,16 +47,20 @@
         <section>
             <figure>
                 <img src="https://geo-taylor.github.io/Capstone/images/travisDavids.png" width="640" height="360" alt="travis davids artwork 1">
-                <figcaption><a href="https://www.artstation.com/mrdavids">Travis Davids ArtStation</a><i> - image attribution: Travis Davids</i></figcaption>
+                <figcaption><a href="https://www.artstation.com/mrdavids">Travis Davids ArtStation</a><em> - image attribution: <strong>Travis Davids</strong></em></figcaption>
             </figure>
             <figure>
             <img src="./images/travisDavids2.png" alt="travis davids artwork 2" width="640" height="360">
-            <figcaption><a href="./images/travisDavids2.png">Enlarge Image</a><i> - image attribution: Travis Davids</i></figcaption>
+            <figcaption><a href="./images/travisDavids2.png">Enlarge Image</a><em> - image attribution: <strong>Travis Davids</strong></em></figcaption>
             </figure>
             <figure>
-            <a href="https://www.youtube.com/TravisDavids" target="_blank">Travis Davids YouTube</a>
+            <a href="https://www.youtube.com/TravisDavids" target="_blank"><strong>Travis Davids</strong> YouTube</a>
             </figure>
         </section>
+
+        <footer>
+            <p>a website to practice <em>HTML + CSS</em> code</p> 
+        </footer>
     <!--Your assignment should demonstrate examples of the following; and remember to make sure we are NOT adding CSS to our editors html files.. we will be using href:
 
     Comments
